--- a/style.css
+++ b/style.css
@@ -1,60 +1,110 @@
 :root {
-    --blue: #7EB6D9;
-    --green: #667302;
-    --yellow: #F29F05;
-    --orange: #F28705;
-    --brown: #A68160;
-    --purple: #8B5CF6;
-    --pink: #EC4899;
-    --gray: #9CA3AF;
-    --black: #1F2937;
-    --size: 23rem;
+  --blue: #7eb6d9;
+  --green: #667302;
+  --yellow: #f29f05;
+  --orange: #f28705;
+  --brown: #a68160;
+  --purple: #8b5cf6;
+  --pink: #ec4899;
+  --gray: #9ca3af;
+  --black: #1f2937;
+  --size: 23rem;
 
-    --brown2: #535E73;
-    --green2: #0D8B8C;
-    --orange2: #F09D6D;
-    --pink2: #F08680;
+  --brown2: #535e73;
+  --green2: #0d8b8c;
+  --orange2: #f09d6d;
+  --pink2: #f08680;
+  --blue2: #87afc7;
 
-    --banner-color: #fbe7d4;
-
+  --banner-color: #fbe7d4;
+  --banner2: #f8dfc1;
 }
-html {
+* {
     scroll-behavior: smooth;
 }
+html {
+  scroll-behavior: smooth;
+}
+.bg-1 {
+  background-color: var(--banner-color);
+}
+/* Ajusta el color de fondo de la siguiente sección según tu preferencia */
+.bg-2 {
+  background-color: var(--banner2);
+}
+.bg-3 {
+  background-color: var(--blue2);
+}
+
+.blur {
+  position: relative;
+}
+
+.blur::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(
+    15px
+  ); /* Ajusta el valor para cambiar el grado de desenfoque */
+  z-index: -1;
+}
+
+.bg-linear-pilar {
+  background: linear-gradient(to bottom, #f8dfc1 24%, transparent 95%);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.bg-linear-viaje {
+  background-color: var(--blue);
+}
+
+.btn-color {
+  background-color: var(--pink2);
+  color: var(--banner-color);
+  box-shadow: 4px 5px 7px 1px var(--orange2);
+}
+.btn-color:hover {
+  background-color: var(--banner-color);
+  color: var(--pink2);
+  box-shadow: 16px 16px 12px var(--orange2);
+  border-color: var(--pink);
+}
 .animate-section {
-    opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 0.5s, transform 0.5s;
-    will-change: opacity, transform;
-  }
-  
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.5s, transform 0.5s;
+  will-change: opacity, transform;
+}
+
 .animate-section.active {
-    opacity: 1;
-    transform: translateY(0);
-  }
+  opacity: 1;
+  transform: translateY(0);
+}
 
 .main-conf {
+  height: 100vh;
+  width: 100% !important; /* Añade esta regla para ocupar todo el ancho de la pantalla */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#fullpage {
+    height: 100vh;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+}
+.section-pilar {
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.bg-1{
-    background-color: var(--banner-color);
-}
+    font-size: 24px;
+    scroll-snap-align: start;
 
+  }
 
-.btn-color{
-    background-color: var(--pink2);
-    color: var(--banner-color);
-    box-shadow: 4px 5px 7px 1px var(--orange2);
-    
-}
-.btn-color:hover{
-    background-color: var(--banner-color);
-    color: var(--pink2);
-    box-shadow: 16px 16px 12px var(--orange2);
-    border-color: var(--pink);
-    
-
-}
