--- a/style.css
+++ b/style.css
@@ -54,12 +54,14 @@ html {
 }
 
 .bg-linear-pilar {
-  background: linear-gradient(to bottom, #f8dfc1 24%, transparent 95%);
+  background: linear-gradient(to bottom, var(--banner2) 24%, transparent 95%);
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
 .bg-linear-viaje {
-  background-color: var(--blue);
+  background: linear-gradient(to bottom, transparent 3%, var(--banner-color) 25%);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
 .btn-color {
@@ -108,3 +110,5 @@ html {
 
   }
 
+
+    /* Efectos para mi Nav */
