--- a/style.css
+++ b/style.css
@@ -1,114 +1,34 @@
-:root {
-  --blue: #7eb6d9;
-  --green: #667302;
-  --yellow: #f29f05;
-  --orange: #f28705;
-  --brown: #a68160;
-  --purple: #8b5cf6;
-  --pink: #ec4899;
-  --gray: #9ca3af;
-  --black: #1f2937;
-  --size: 23rem;
-
-  --brown2: #535e73;
-  --green2: #0d8b8c;
-  --orange2: #f09d6d;
-  --pink2: #f08680;
-  --blue2: #87afc7;
-
-  --banner-color: #fbe7d4;
-  --banner2: #f8dfc1;
-}
-* {
-    scroll-behavior: smooth;
-}
-html {
-  scroll-behavior: smooth;
-}
-.bg-1 {
-  background-color: var(--banner-color);
-}
-/* Ajusta el color de fondo de la siguiente sección según tu preferencia */
-.bg-2 {
-  background-color: var(--banner2);
-}
-.bg-3 {
-  background-color: var(--blue2);
-}
-
-.blur {
-  position: relative;
-}
-
-.blur::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  backdrop-filter: blur(
-    15px
-  ); /* Ajusta el valor para cambiar el grado de desenfoque */
-  z-index: -1;
-}
-
-.bg-linear-pilar {
-  background: linear-gradient(to bottom, var(--banner2) 24%, transparent 95%);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-}
-.bg-linear-viaje {
-  background: linear-gradient(to bottom, transparent 3%, var(--banner-color) 25%);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-}
-
-.btn-color {
-  background-color: var(--pink2);
-  color: var(--banner-color);
-  box-shadow: 4px 5px 7px 1px var(--orange2);
-}
-.btn-color:hover {
-  background-color: var(--banner-color);
-  color: var(--pink2);
-  box-shadow: 16px 16px 12px var(--orange2);
-  border-color: var(--pink);
-}
-.animate-section {
-  opacity: 0;
-  transform: translateY(20px);
-  transition: opacity 0.5s, transform 0.5s;
-  will-change: opacity, transform;
-}
-
-.animate-section.active {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-.main-conf {
+.viewport {
   height: 100vh;
-  width: 100% !important; /* Añade esta regla para ocupar todo el ancho de la pantalla */
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-#fullpage {
-    height: 100vh;
-    overflow-y: scroll;
-    scroll-snap-type: y mandatory;
+.parrafo {
+  text-align: justify !important;
 }
-.section-pilar {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-    scroll-snap-align: start;
 
-  }
+.asideImg {
+  background-repeat: space;
+}
 
+.bg-img {
+  background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
+}
+body {
+  background-image: url("https://www.toptal.com/designers/subtlepatterns/uploads/dot-grid.png");
+  background-repeat: repeat; /* Opciones: repeat, repeat-x, repeat-y, no-repeat */
+}
+.bg-banner {
+  background-image: url("/img/banner2.jpg");
+  background-blend-mode: screen;
+  background-size: cover; /* Opciones: repeat, repeat-x, repeat-y, no-repeat */
+  height: 50vh;
+}
 
-    /* Efectos para mi Nav */
+.lg-1 {
+  background-image: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
+}
+
+.btn-ig
+{
+  background-image: linear-gradient(to right, #FF512F 0%, #DD2476  51%, #FF512F  100%)
+}
