--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@
   height: 40vh;
 }
 
+.bg-autor-active:hover{
+  background-image: linear-gradient(90deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);  
+}
+
 .lg-1 {
   background-image: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
 }
