--- a/style.css
+++ b/style.css
@@ -35,7 +35,9 @@
 }
 
 .bg-autor-active:hover{
-  background-image: linear-gradient(90deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);  
+  background-image: linear-gradient(90deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
+  color: white;
+  font-weight: bold;
 }
 
 .lg-1 {
